termino de html inicio de la animacion

--- a/index.html
+++ b/index.html
@@ -3,10 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>practica_3</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <main class="card__container">
+        <section class="card card--1">
+            <h2 class="title-card">BASIC</h2>
+            <p class="price"><small>$</small> 20</p>
+            <p class="plan">--- PLAN ---</p>
+            <div class="container">
+                <p class="content">FREE Stickers</p>
+                <p class="content">FREE Delivery</p>
+                <p class="content">24/7 Support</p>
+            </div>
+            <footer>
+                <button class="subscribe">subscribe</button>
+            </footer>
+        </section>
+        <section class="card card--2">
+            <h2 class="title-card">AWESOME</h2>
+            <p class="price"><small>$</small>50</p>
+            <p class="plan">--- PLAN ---</p>
+            <div class="container">
+                <p class="content">FREE Stickers</p>
+                <p class="content">FREE Delivery</p>
+                <p class="content">24/7 Support</p>
+            </div>
+            <footer>
+                <button class="subscribe">subscribe</button>
+            </footer>
+        </section>
+        <section class="card card--3">
+            <h2 class="title-card">PREMIUM</h2>
+            <p class="price"><small>$</small>100</p>
+            <p class="plan">--- PLAN ---</p>
+            <div class="container">
+                <p class="content">FREE Stickers</p>
+                <p class="content">FREE Delivery</p>
+                <p class="content">24/7 Support</p>
+            </div>
+            <footer>
+                <button class="subscribe">subscribe</button>
+            </footer>
+        </section>
+    </main>
 </body>
 </html>
